--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "firebase": "^10.12.2",
     "lucide-react": "^0.417.0",
     "negotiator": "^0.6.3",
-    "next": "^14.2.5",
+    "next": "14.2.35",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
